added json ignore for password
