# src/main/resources/static/openapi-v1.yaml
@@ -142,6 +142,10 @@ paths:
       responses:
         '200':
           description: User deleted successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessDto'
         '400':
           description: Invalid request parameters
           content:
@@ -198,6 +202,7 @@ components:
           maximum: 40
         password:
           type: string
+          x-field-extra-annotation: "@com.fasterxml.jackson.annotation.JsonIgnore"
           minLength: 6
           description: The user's password, must be at least 8 characters long.
           pattern: '^(?=.*[A-Z])(?=.*[a-z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$'
@@ -244,3 +249,17 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ValidationError'
+    SuccessDto:
+      type: object
+      properties:
+        messgae:
+          type: string
+          example: "User Deleted Successfully.."
+        timestamp:
+          type: string
+          description: Error occured timestamp
+          example: "2024-11-22T05:14:09.138+00:00"
+        status:
+          type: integer
+          description: Error code Issue
+          example: 200
